--- a/css/utilities.css
+++ b/css/utilities.css
@@ -21,6 +21,9 @@
 .justify-between {
   justify-content: space-between;
 }
+.items-center {
+  align-items: center;
+}
 .grid {
   display: grid;
 }
